deploy: 57ef7f99f9ff435d3782240d53945d315c28fc28

--- a/README.html
+++ b/README.html
@@ -443,6 +443,7 @@
 <li><p>Yan Zeng</p></li>
 <li><p>Alain Zhiyanov</p></li>
 <li><p>Mahsa Zarei</p></li>
+<li><p>Felix Fu</p></li>
 </ul>
 </section>
 </section>
