deploy: 3877f1bfea914dfa9798fce27429a0d8b738595e

--- a/lectures/204-Andy-lectures/20_time_series.html
+++ b/lectures/204-Andy-lectures/20_time_series.html
@@ -534,6 +534,11 @@ Freq: 3h, Name: one, dtype: int64
 <ul class="simple">
 <li><p>We have a time-ordered sequence of data points.</p></li>
 <li><p>This type of data is distinctive because it is inherently sequential, with an intrinsic order based on time.</p></li>
+<li><p>Previously we have assumed there is no relationship between points i.e. order doesn’t matter.</p>
+<ul>
+<li><p>This is sometimes referred to as assuming observations are exchangeable</p></li>
+</ul>
+</li>
 <li><p>The number of bikes available at a station at one point in time is often related to the number of bikes at earlier times.</p></li>
 <li><p>This is a <strong>time-series forecasting</strong> problem.</p></li>
 </ul>
