--- a/lectures/tutorials/07_Time_series.html
+++ b/lectures/tutorials/07_Time_series.html
@@ -2289,7 +2289,7 @@ Name: Date, Length: 142193, dtype: datetime64[ns]
 <li><p>Fit and score a <code class="docutils literal notranslate"><span class="pre">LogisticRegression</span></code> model on this new dataset. Compare the results to what was achieved before.</p></li>
 <li><p>Observe the coefficients for <code class="docutils literal notranslate"><span class="pre">Rainfall</span></code> and <code class="docutils literal notranslate"><span class="pre">Rainfall_lag1</span></code>. What is their relationship with the target?</p></li>
 </ul>
-<p>Last, here are some more options for lagged features to check out:</p>
+<p>Last, here are some more options, for you to check out:</p>
 <ul class="simple">
 <li><p>We could also create a lagged version of the target. In fact, this dataset already has that built in! <code class="docutils literal notranslate"><span class="pre">RainToday</span></code> is the lagged version of the target <code class="docutils literal notranslate"><span class="pre">RainTomorrow</span></code>.</p></li>
 <li><p>We could also create lagged version of other features, or more lags</p></li>
